--- a/css/main.scss
+++ b/css/main.scss
@@ -5,3 +5,7 @@
 @import "flowers";
 @import "space";
 @import "message";
+
+html {
+  overflow-x: hidden;
+}
